// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composables > useShootDns > should add extension custom domain dns provider 1`] = `
{
  "dns": {
    "domain": "example.org",
    "providers": [
      {
        "credentialsRef": {
          "apiVersion": "v1",
          "kind": "Secret",
          "name": "bar",
        },
        "primary": true,
        "type": "foo",
      },
    ],
  },
  "extensions": [
    {
      "providerConfig": {
        "apiVersion": "service.dns.extensions.gardener.cloud/v1alpha1",
        "kind": "DNSConfig",
        "providers": [
          {
            "credentials": "shoot-dns-service-bar",
            "domains": {
              "include": [
                "example.org",
              ],
            },
            "type": "foo",
          },
        ],
        "syncProvidersFromShootSpecDNS": false,
      },
      "type": "shoot-dns-service",
    },
  ],
  "resources": [
    {
      "name": "shoot-dns-service-bar",
      "resourceRef": {
        "apiVersion": "v1",
        "kind": "Secret",
        "name": "bar",
      },
    },
  ],
}
`;

exports[`composables > useShootDns > should add extension dns providers 1`] = `
{
  "dns": {
    "domain": "example.org",
  },
  "extensions": [
    {
      "providerConfig": {
        "apiVersion": "service.dns.extensions.gardener.cloud/v1alpha1",
        "kind": "DNSConfig",
        "providers": [
          {
            "credentials": "shoot-dns-service-aws-route53-secret",
            "type": "aws-route53",
          },
        ],
        "syncProvidersFromShootSpecDNS": false,
      },
      "type": "shoot-dns-service",
    },
  ],
  "resources": [
    {
      "name": "shoot-dns-service-aws-route53-secret",
      "resourceRef": {
        "apiVersion": "v1",
        "kind": "Secret",
        "name": "aws-route53-secret",
      },
    },
  ],
}
`;

exports[`composables > useShootDns > should add primary dns provider 1`] = `
{
  "dns": {
    "domain": "example.org",
    "providers": [
      {
        "credentialsRef": {
          "apiVersion": "v1",
          "kind": "Secret",
          "name": "bar",
        },
        "primary": true,
        "type": "foo",
      },
    ],
  },
}
`;

exports[`composables > useShootDns > should delete extension dns providers > last provider deleted 1`] = `
{
  "extensions": [],
  "resources": [],
}
`;

exports[`composables > useShootDns > should delete extension dns providers > one provider deleted 1`] = `
{
  "extensions": [
    {
      "providerConfig": {
        "apiVersion": "service.dns.extensions.gardener.cloud/v1alpha1",
        "kind": "DNSConfig",
        "providers": [
          {
            "credentials": undefined,
            "type": "aws-route53",
          },
        ],
        "syncProvidersFromShootSpecDNS": false,
      },
      "type": "shoot-dns-service",
    },
  ],
  "resources": [],
}
`;

exports[`composables > useShootDns > should delete extension dns providers > two providers added 1`] = `
{
  "extensions": [
    {
      "providerConfig": {
        "apiVersion": "service.dns.extensions.gardener.cloud/v1alpha1",
        "kind": "DNSConfig",
        "providers": [
          {
            "credentials": "shoot-dns-service-aws-route53-secret",
            "type": "aws-route53",
          },
          {
            "credentials": undefined,
            "type": "aws-route53",
          },
        ],
        "syncProvidersFromShootSpecDNS": false,
      },
      "type": "shoot-dns-service",
    },
  ],
  "resources": [
    {
      "name": "shoot-dns-service-aws-route53-secret",
      "resourceRef": {
        "apiVersion": "v1",
        "kind": "Secret",
        "name": "aws-route53-secret",
      },
    },
  ],
}
`;

exports[`composables > useShootDns > should fallback to provider credentialsRef when credential is not found in store 1`] = `
{
  "extensions": [
    {
      "providerConfig": {
        "apiVersion": "service.dns.extensions.gardener.cloud/v1alpha1",
        "kind": "DNSConfig",
        "providers": [
          {
            "credentials": "shoot-dns-service-bar",
            "type": "foo",
          },
        ],
        "syncProvidersFromShootSpecDNS": false,
      },
      "type": "shoot-dns-service",
    },
  ],
  "resources": [
    {
      "name": "shoot-dns-service-bar",
      "resourceRef": {
        "apiVersion": "v1",
        "kind": "Secret",
        "name": "bar",
      },
    },
  ],
}
`;
